welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur()==true)
        ^SnakeBuggle:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		{ if (getDirection() == Direction.EST)
                ^